# Segment-Tree-Battle-Simulator

./: BuildOperations.cpp  CMakeLists.txt  QueryOperations.cpp  README.md  SegmentTree.cpp  SegmentTree.h  TreeOperations.h  UpdateOperations.cpp  Utils.h  main.cpp
